fix(distributeur): add 8px spacing between TextInput and HelpButton

--- a/packages/canopee-css/src/distributeur/Form/Text/Text.css
+++ b/packages/canopee-css/src/distributeur/Form/Text/Text.css
@@ -101,3 +101,7 @@
   height: 100%;
   padding-top: 0;
 }
+
+.af-form__text > .af-popover__wrapper {
+  margin-left: 0.5rem;
+}
